Fixed login spacing issues

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,11 +3,17 @@
   place-items: center;
   height: 100vh;
   background-color: #242526;
+  overflow-y: overlay;
 }
 
 .loginBubble {
-  height: 70vh;
-  width: 75vh;
+  height: 75%;
+  width: 45%;
+  max-height: 495px;
+  max-width: 530px;
+  min-height: 440px;
+  min-width: 305px;
+
   background-color: white;
   padding: 10px;
   border-radius: 30px;
@@ -18,7 +24,6 @@
   display: grid;
   place-items: center;
   align-items: center;
-  justify-content: center;
 }
 
 .loginBubble > h1 {
